<?xml version="1.0"?>
<package>
  <name>gtp</name>
  <version>0.0.0</version>
  <description>The gtp package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jules.waldhart@laas.fr">Jules Waldhart</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gtp</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="jules.waldhart@laas.fr">Jules Waldhart</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Boost</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>MOVE3D</build_depend>
  <build_depend>MOVE3D-PLANNERS</build_depend>
  <build_depend>gtp_ros_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>move3d_ros_lib</build_depend>
  <build_depend>toaster_msgs</build_depend>
  <build_depend>gtp_ros_msg</build_depend>
  <run_depend>Boost</run_depend>
  <run_depend>Eigen3</run_depend>
  <run_depend>MOVE3D</run_depend>
  <run_depend>MOVE3D-PLANNERS</run_depend>
  <run_depend>gtp_ros_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>move3d_ros_lib</run_depend>
  <run_depend>toaster_msgs</run_depend>
  <run_depend>gtp_ros_msg</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
